# apiexec

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
adapters/: datadog_metrics.hpp  generic_rest.cpp  generic_rest.hpp  openai.cpp  openai.hpp  registry.cpp  registry.hpp
bindings/: EXAMPLES.md
bindings/go/: go.mod
bindings/go/apiexec/: apiexec.go  apiexec_test.go
bindings/go/examples/cancellation/: main.go
bindings/go/examples/cost_budget/: main.go
bindings/go/examples/multi_adapter/: main.go
bindings/go/examples/paginate/: main.go
bindings/go/examples/retry/: main.go
bindings/go/examples/streaming/: main.go
bindings/java/examples/: RetryExample.java  StreamingExample.java
bindings/java/src/main/java/com/apiexec/: Stream.java
bindings/js/: package.json
bindings/js/examples/: retry.js  streaming.js
bindings/js/src/: index.js  test.js
bindings/python/: .gitignore  apiexec.py  test_api.py  test_apiexec.py
bindings/python/examples/: cancellation.py  multi_adapter.py  retry.py  streaming.py
bindings/rust/: Cargo.toml
bindings/rust/examples/: cancellation.rs  retry.rs  streaming.rs
bindings/rust/src/: lib.rs
c_api/: c_api.cpp  c_api.h
core/: cursor.hpp  engine.hpp  execution_policy.hpp  itransport.hpp  limits.hpp  stream_error.hpp  types.hpp  vendor_adapter.hpp
docs/: METRICS.md
policy/: default_policy.cpp  default_policy.hpp  default_policy_json.cpp
source/: CMakeLists.txt  apiexec-config.cmake.in  apiexec.pc.in
source/adapters/: ai_adapter.hpp  anthropic.cpp  anthropic.hpp  datadog_metrics.cpp
source/core/: engine.hpp  logging.hpp  metrics.hpp  types.hpp
source/examples/: ollama_demo.cpp  summarise.cpp
source/policy/: cost_aware_policy.hpp
source/transport/: curl_transport.cpp  curl_transport.hpp
tests/fuzz/: adapter_parse_fuzz.cpp
tests/integration/: cost_accounting_test.cpp  e2e_test.cpp  multi_adapter_test.cpp  prefetch_bench.cpp  rate_limit_test.cpp
tests/integration/mock_server/: mock_server.cpp  mock_server.hpp
tests/soak/: soak_test.cpp
tests/unit/: c_api_test.cpp  cost_hooks_test.cpp  cursor_test.cpp  engine_test.cpp  exhaustion_test.cpp  metrics_test.cpp  policy_json_test.cpp  policy_test.cpp  prefetch_test.cpp  retry_test.cpp  streaming_test.cpp
transport/: curl_transport.cpp  curl_transport.hpp
